# FIX-Protocol

./: .clang-format  .gitignore  CMakeLists.txt  README.md  vcpkg.json
.github/workflows/: ci.yml
apps/oms/: main.cpp
include/fix/: engine.hpp
include/fix/core/: constants.hpp  field.hpp  message.hpp  types.hpp
include/fix/dictionary/: data_dictionary.hpp
include/fix/log/: message_log.hpp
include/fix/parser/: parser.hpp  serializer.hpp
include/fix/session/: session.hpp  session_manager.hpp
include/fix/store/: file_store.hpp  memory_store.hpp  message_store.hpp
include/fix/transport/: tcp_transport.hpp  transport.hpp
src/: engine.cpp
src/dictionary/: data_dictionary.cpp
src/log/: message_log.cpp
src/parser/: parser.cpp  serializer.cpp
src/session/: session.cpp  session_manager.cpp
src/store/: file_store.cpp
src/transport/: tcp_transport.cpp
tests/: test_dictionary.cpp  test_message.cpp  test_parser.cpp  test_session.cpp  test_store.cpp
